Fix Combine all Multipart Components #68 Linear@web-55-combine-all-multipart-components

--- a/apps/Web-App/src/components/story/components/layout/Drawer/Drawer.mdx
+++ b/apps/Web-App/src/components/story/components/layout/Drawer/Drawer.mdx
@@ -25,27 +25,27 @@ import {
     DrawerFooter
 } from "@layout/.";
 
-<Drawer>
-    <DrawerTrigger>
+<Drawer.Wrapper>
+    <Drawer.Trigger>
         {/* Trigger goes here */}
-    </DrawerTrigger>
-    <DrawerContent>
-        <DrawerHeader>
-            <DrawerTitle>
+    </Drawer.Trigger>
+    <Drawer.Content>
+        <Drawer.Header>
+            <Drawer.Title>
                 {/* Title goes here // Text Possible */} 
-            </DrawerTitle>
-            <DrawerDescription>
+            </Drawer.Title>
+            <Drawer.Description>
                 {/* Description goes here // Text Possible */}
-            </DrawerDescription>
-            <DrawerClose>
+            </Drawer.Description>
+            <Drawer.Close>
                 {/* Close button goes here // Also Text Possible */}
-            </DrawerClose>
-        </DrawerHeader>
-        <DrawerFooter>
+            </Drawer.Close>
+        </Drawer.Header>
+        <Drawer.Footer>
             {/* Footer goes here // Text Only */}
-        </DrawerFooter>
-    </DrawerContent>
-</Drawer>
+        </Drawer.Footer>
+    </Drawer.Content>
+</Drawer.Wrapper>
 ```
 
 Important to note is that the Buttons Are Styled in Text Only.
