--- a/apps/Web-App/src/components/story/components/ui/Avatar/Avatar.mdx
+++ b/apps/Web-App/src/components/story/components/ui/Avatar/Avatar.mdx
@@ -1,9 +1,9 @@
-import { Canvas, Meta, Primary, Controls, Source } from '@storybook/blocks'
-import { Avatar, AvatarGroup } from '@ui/Avatar'
-import * as AvatarStories from './Avatar.stories'
-import { Popup } from '@ui/.'
-import * as Drawer from '@layout/Drawer'
-import * as Collapse from '@layout/Collapse'
+import { Canvas, Meta, Primary, Controls, Source } from "@storybook/blocks"
+import { Avatar, AvatarGroup } from "@ui/Avatar"
+import * as AvatarStories from "./Avatar.stories"
+import { Popup } from "@ui/."
+import * as Drawer from "@layout/Drawer"
+import * as Collapse from "@layout/Collapse"
 
 <Meta of={AvatarStories} />
 # Avatar
@@ -54,7 +54,7 @@ import * as Collapse from '@layout/Collapse'
 
 <Drawer.Wrapper>
     <Drawer.Trigger>
-        <Avatar username="derjacklive" size={50} />
+        <Avatar username="jackatdjl" size={50} />
     </Drawer.Trigger>
     <Drawer.Content>
         <Drawer.Header>
@@ -100,7 +100,7 @@ import * as Collapse from '@layout/Collapse'
 </Drawer.Wrapper>
 <Drawer.Wrapper>
     <Drawer.Trigger>
-        <Avatar.Group users={["derjacklive", "octocat", "mutebefehl"]} size={50} />
+        <AvatarGroup users={["jackatdjl", "octocat", "mutebefehl"]} size={50} />
     </Drawer.Trigger>
     <Drawer.Content>
         <Drawer.Header>
@@ -110,7 +110,7 @@ import * as Collapse from '@layout/Collapse'
             <Drawer.Description>
             {}
             </Drawer.Description>
-            <AvatarGroup users={["derjacklive", "octocat", "mutebefehl"]} size={150} />
+            <AvatarGroup users={["jackatdjl", "octocat", "mutebefehl"]} size={150} />
             ```tsx
             import { AvatarGroup } from './Avatar';
 
@@ -128,7 +128,7 @@ import * as Collapse from '@layout/Collapse'
 </Drawer.Wrapper>
 <Drawer.Wrapper>
     <Drawer.Trigger>
-        <AvatarGroup users={["mutebefehl", "octocat", "derjacklive", "o"]} limit={3} size={50} />
+        <AvatarGroup users={["mutebefehl", "octocat", "jackatdjl", "o"]} limit={3} size={50} />
     </Drawer.Trigger>
     <Drawer.Content>
         <Drawer.Header>
@@ -138,11 +138,11 @@ import * as Collapse from '@layout/Collapse'
             <Drawer.Description>
             {}
             </Drawer.Description>
-            <AvatarGroup users={["mutebefehl", "octocat", "derjacklive", "o"]} limit={3} size={100} />
+            <AvatarGroup users={["mutebefehl", "octocat", "jackatdjl", "o"]} limit={3} size={100} />
             ```tsx
             import { AvatarGroup } from './Avatar';
 
-            <AvatarGroup users={["mutebefehl", "octocat", "derjacklive", "o"]} limit={3} />
+            <AvatarGroup users={["mutebefehl", "octocat", "jackatdjl", "o"]} limit={3} />
             ```
             <Drawer.Close>
                 Close
