--- a/apps/Web-App/src/components/story/components/layout/Dialog/Dialog.mdx
+++ b/apps/Web-App/src/components/story/components/layout/Dialog/Dialog.mdx
@@ -1,7 +1,7 @@
-import { Meta, Canvas, Controlls,Primary } from '@storybook/blocks';
-import * as DialogStories from './Dialog.stories';
-import { Dialog, DialogWrapper} from '@layout/.';
-import * as Collapse from '@layout/Collapse';
+import { Meta, Canvas, Controlls, Primary } from "@storybook/blocks"
+import * as DialogStories from "./Dialog.stories"
+import { Dialog, DialogWrapper } from "@layout/Dialog"
+import * as Collapse from "@layout/Collapse"
 
 <Meta of={DialogStories} />
 # Dialog
