--- a/apps/Web-App/src/components/story/components/ui/Avatar/Avatar.mdx
+++ b/apps/Web-App/src/components/story/components/ui/Avatar/Avatar.mdx
@@ -1,7 +1,7 @@
 import { Canvas, Meta, Primary, Controls, Source } from "@storybook/blocks"
 import { Avatar, AvatarGroup } from "@ui/Avatar"
 import * as AvatarStories from "./Avatar.stories"
-import { Popup } from "@ui/."
+import { Popup } from "@ui/Popup"
 import * as Drawer from "@layout/Drawer"
 import * as Collapse from "@layout/Collapse"
 
