--- a/apps/Web-App/src/components/story/components/ui/Checkbox/Checkbox.mdx
+++ b/apps/Web-App/src/components/story/components/ui/Checkbox/Checkbox.mdx
@@ -1,5 +1,5 @@
 import { Meta, Canvas, Primary } from "@storybook/blocks"
-import { Checkbox } from "@ui/index"
+import { Checkbox } from "@ui/Checkbox"
 import * as CheckboxStories from "./Checkbox.stories"
 
 <Meta of={CheckboxStories} />
